bindings/swift/Sources/CProven/include/proven.h

/* ============================================================================
 * Status Codes
 * ============================================================================ */

typedef enum ProvenStatus {
    PROVEN_OK = 0,
    PROVEN_ERR_NULL_POINTER = -1,
    PROVEN_ERR_INVALID_ARGUMENT = -2,
    PROVEN_ERR_OVERFLOW = -3,
    PROVEN_ERR_UNDERFLOW = -4,
    PROVEN_ERR_DIVISION_BY_ZERO = -5,
    PROVEN_ERR_PARSE_FAILURE = -6,
    PROVEN_ERR_VALIDATION_FAILED = -7,
    PROVEN_ERR_OUT_OF_BOUNDS = -8,
    PROVEN_ERR_ENCODING_ERROR = -9,
    PROVEN_ERR_ALLOCATION_FAILED = -10,
    PROVEN_ERR_NOT_IMPLEMENTED = -99
} ProvenStatus;
/* ============================================================================
 * Result Types
 * ============================================================================ */

typedef struct ProvenIntResult {
    ProvenStatus status;
    int64_t value;
} ProvenIntResult;
typedef struct ProvenBoolResult {
    ProvenStatus status;
    bool value;
} ProvenBoolResult;
typedef struct ProvenStringResult {
    ProvenStatus status;
    char* value;
    size_t length;
} ProvenStringResult;
typedef struct ProvenFloatResult {
    ProvenStatus status;
    double value;
} ProvenFloatResult;
/* ============================================================================
 * Runtime Management
 * ============================================================================ */

int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
uint32_t proven_ffi_abi_version(void);
/* ============================================================================
 * Memory Management
 * ============================================================================ */

void proven_free_string(char* ptr);
/* ============================================================================
 * SafeMath
 * ============================================================================ */

ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
/* ============================================================================
 * SafeString
 * ============================================================================ */

ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePath
 * ============================================================================ */

ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCrypto
 * ============================================================================ */

ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeEmail
 * ============================================================================ */

ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
typedef struct ProvenIPv4Result {
    ProvenStatus status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeFloat
 * ============================================================================ */

ProvenFloatResult proven_float_div(double a, double b);
bool proven_float_is_finite(double x);
bool proven_float_is_nan(double x);
ProvenFloatResult proven_float_sqrt(double x);
ProvenFloatResult proven_float_ln(double x);
/* ============================================================================
 * SafeJson
 * ============================================================================ */

typedef enum ProvenJsonType {
    PROVEN_JSON_NULL = 0,
    PROVEN_JSON_BOOL = 1,
    PROVEN_JSON_NUMBER = 2,
    PROVEN_JSON_STRING = 3,
    PROVEN_JSON_ARRAY = 4,
    PROVEN_JSON_OBJECT = 5,
    PROVEN_JSON_INVALID = -1
} ProvenJsonType;
ProvenBoolResult proven_json_is_valid(const uint8_t* ptr, size_t len);
ProvenJsonType proven_json_get_type(const uint8_t* ptr, size_t len);
bool proven_datetime_is_leap_year(int32_t year);
uint8_t proven_datetime_days_in_month(int32_t year, uint8_t month);
/* ============================================================================
 * SafeHex (FFI-level: proven_hex_encode / proven_hex_decode)
 * ============================================================================ */

ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
ProvenBoolResult proven_content_type_is_json(
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len
);
/* ============================================================================
 * HTTP URL Encoding (FFI-level: proven_http_*)
 * ============================================================================ */

ProvenStringResult proven_http_url_encode(const uint8_t* ptr, size_t len);
ProvenStringResult proven_http_url_decode(const uint8_t* ptr, size_t len);
/* ============================================================================
 * Version Information
 * ============================================================================ */

uint32_t proven_version_major(void);
uint32_t proven_version_minor(void);
uint32_t proven_version_patch(void);
uint32_t proven_module_count(void);